update to follow V3 spec
