# swagger.yaml
@@ -196,7 +196,7 @@ paths:
       security:
         - Bearer: []
       operationId: addBillingAccount
-      description: Create a new billing account, Admin user only.
+      description: Create or update a billing account, Admin user only. If method is "POST", then it will create a new account. The account will be updated when method is "PUT"
       parameters:
         - in: body
           name: body
@@ -329,11 +329,7 @@ paths:
           name: body
           required: true
           schema:
-            type: object
-            properties:
-              userId:
-                type: integer
-                format: int64
+            $ref: "#/definitions/AddAccountUserRequest"
 
   /billing-accounts/{billingAccountId}/users/{userId}:
     delete:
@@ -558,6 +554,9 @@ definitions:
     properties:
       param:
         $ref: "#/definitions/NewBillingAccount"
+      method:
+        type: string
+        description: should be either POST or PUT
 
   NewClientBodyParam:
     type: object
@@ -790,6 +789,12 @@ definitions:
             type: array
             items:
               $ref: "#/definitions/BillingAccount"
+  AddAccountUserRequest:
+    title: The request to add a user to an account.
+    type: object
+    properties:
+      userId:
+        type: integer
 
   BillingAccountUserListResponse:
     title: List response
